@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.telenav.cactus</groupId>
         <artifactId>cactus</artifactId>
-        <version>1.4.22</version>
+        <version>1.4.24</version>
     </parent>
 
     <artifactId>cactus-maven-plugin</artifactId>
@@ -27,10 +27,10 @@
 
     <properties>
         <enforcer.skip>true</enforcer.skip>
-        <maven.javadoc.skip>true</maven.javadoc.skip>
+        <!--<maven.javadoc.skip>true</maven.javadoc.skip>-->
         <mastfrog.version>2.8.3</mastfrog.version>
         <!-- this must be overridden here only to use the previous version,
-             or it will fail trying to process itself while it is being built -->
+        or it will fail trying to process itself while it is being built -->
         <cactus.maven.plugin.versions>${cactus.previous.version}</cactus.maven.plugin.versions>
     </properties>
 
@@ -90,6 +90,25 @@
         <plugins>
 
             <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-reads</arg>
+                        <arg>cactus.maven.plugin=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                </configuration>
+                <version>${maven-compiler-plugin.version}</version>
+            </plugin>
+            
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven-javadoc-plugin.version}</version>
+                <configuration>
+                    <additionalOptions>--add-reads cactus.maven.plugin=ALL-UNNAMED</additionalOptions>
+                </configuration>
+            </plugin>
+
+            <plugin>
 
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -97,7 +116,9 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Automatic-Module-Name>cactus.maven.plugin</Automatic-Module-Name>
+                            <Add-Opens>cactus.maven.plugin/*=ALL-UNNAMED</Add-Opens>
+                            <Add-Exports>cactus.maven.plugin/*=ALL-UNNAMED</Add-Exports>
+                            <Add-Exports>cactus.maven.plugin/*=com.google.guice</Add-Exports>
                         </manifestEntries>
                     </archive>
                 </configuration>
@@ -106,11 +127,27 @@
 
             <plugin>
 
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
                 <configuration>
                     <goalPrefix>cactus</goalPrefix>
                 </configuration>
                 <executions>
+                    <!-- We need this for release, so that we can use compile, but 
+                         but not install, to pre-generate the plugin descriptor so that 
+                         the rest of the build, which will use this plugin from
+                         target/classes, does not fail because there is no plugin.xml
+                         in META-INF.  Harmless to do it earlier, since we're not using
+                         any odd scripting languages.
+                    -->
+                    <execution>
+                        <id>mojo-descriptor-compile-time</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>descriptor</goal>
+                        </goals>
+                    </execution>
+                    
                     <execution>
                         <id>mojo-descriptor</id>
                         <phase>process-classes</phase>
